--- a/pom.xml
+++ b/pom.xml
@@ -146,8 +146,8 @@
 
 		<!-- for maven compiler plugin -->
 		<maven_compiler_plugin_version>2.3.2</maven_compiler_plugin_version>
-		<java_source_version>1.6</java_source_version>
-		<java_target_version>1.6</java_target_version>
+		<java_source_version>1.7</java_source_version>
+		<java_target_version>1.7</java_target_version>
 		<file_encoding>UTF-8</file_encoding>
 
 		<maven_source_plugin_version>2.1.1</maven_source_plugin_version>
@@ -708,4 +708,19 @@
 			<timezone>+8</timezone>
 		</developer>
 	</developers>
+	
+	
+	<distributionManagement> 
+		<repository> 
+			<id>nexus-releases</id> 
+			<name>Nexus Releases Repository</name> 
+			<url>http://172.31.21.97:8072/nexus/content/repositories/releases/</url> 
+		</repository>
+		<snapshotRepository> 
+			<id>nexus-snapshots</id> 
+			<name>Nexus Snapshots Repository</name> 
+			<url>http://172.31.21.97:8072/nexus/content/repositories/snapshots/</url>
+		</snapshotRepository> 
+	</distributionManagement>
+
 </project>
